# uav_target_recog

./: CMakeLists.txt  main.cpp
